# sqlite_migrator

./: .gitignore  .migrate-config.yaml  Cargo.toml  README.md
src/: loader.rs  main.rs  migration.rs
src/command/: create.rs  mod.rs
