[package]
name = "sqlite_migrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive", "env"] }
rusqlite = "0.29.0"
tracing = "0.1.40"
tracing-subscriber = "0.3"
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.27"
